Fix: Landing page background not covering screen on large viewports

--- a/src/sass/modules/_landing.scss
+++ b/src/sass/modules/_landing.scss
@@ -9,19 +9,27 @@
   width: 100%;
   z-index: 5000;
   background: $landing-background-small no-repeat center center fixed $jungle-green; 
-
-  @media #{$medium-up} {
-		background: $landing-background-medium no-repeat center center fixed $jungle-green; 
-  }
-
-  @media #{$large-up} {
-  	background: $landing-background-large no-repeat center center fixed $jungle-green; 
-  }
-  
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+  @media #{$medium-up} {
+		background: $landing-background-medium no-repeat center center fixed $jungle-green; 
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+  }
+
+  @media #{$large-up} {
+  	background: $landing-background-large no-repeat center center fixed $jungle-green; 
+		-webkit-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
+  }
+ 
 
 	&:before {
 		content: '';
